--- a/home/.config/polybar/config
+++ b/home/.config/polybar/config
@@ -24,6 +24,10 @@ font-4 = FontAwesome:size=10;0
 modules-left = i3
 modules-right = spotify cpu memory pulseaudio backlight wireless-network battery date
 
+tray-position = right
+tray-detached = false
+tray-padding = 1
+
 [module/backlight]
 type = internal/xbacklight
 format = <ramp>
