--- a/home/.config/polybar/config
+++ b/home/.config/polybar/config
@@ -22,7 +22,7 @@ font-3 = Termsynu:size=8:antialias=false;-2
 font-4 = FontAwesome:size=10;0
 
 modules-left = i3
-modules-right = spotify cpu memory pulseaudio backlight wireless-network battery date
+modules-right = spotify cpu memory pulseaudio battery date
 
 tray-position = right
 tray-detached = false
