--- a/home/.config/polybar/config
+++ b/home/.config/polybar/config
@@ -75,6 +75,18 @@ pin-workspaces = false
 
 label-dimmed-underline = ${root.background}
 
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;5
+ws-icon-5 = 6;
+ws-icon-6 = 7;
+ws-icon-7 = 8;8
+ws-icon-8 = 9;9
+ws-icon-9 = 10;10
+ws-icon-default = .
+
 ; Available tags:
 ;   <label-state> (default) - gets replaced with <label-(focused|unfocused|visible|urgent)>
 ;   <label-mode> (default)
@@ -93,7 +105,7 @@ label-mode-background = #e60053
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-label-focused =  %index%
+label-focused =  %icon%
 label-focused-foreground = #ffffff
 label-focused-background = #3f3f3f
 label-focused-underline = #fba922
@@ -105,7 +117,7 @@ label-focused-padding = 1
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-label-unfocused = %index%
+label-unfocused = %icon%
 label-unfocused-padding = 1
 
 ; Available tokens:
