--- a/home/.config/polybar/config
+++ b/home/.config/polybar/config
@@ -1,8 +1,8 @@
 [bar/top]
 monitor = ${env:MONITOR:eDP-1}
 width = 100%
-height = 30
-dpi = 96
+height = 60
+dpi = 192
 
 background = #ff222222
 foreground = #ccffffff
@@ -26,7 +26,9 @@ modules-right = spotify cpu memory pulseaudio battery date
 
 tray-position = right
 tray-detached = false
-tray-padding = 1
+tray-padding = 2
+tray-maxsize = 64
+tray-background = ${root.background}
 
 [module/backlight]
 type = internal/xbacklight
