umonitor + idea project opener

--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -167,6 +167,7 @@ bindsym XF86MonBrightnessDown exec --no-startup-id "xbacklight -set 1; dunstify 
 bindsym $mod+XF86MonBrightnessDown exec --no-startup-id "xbacklight -dec 10; dunstify -r $notify_bright 'Brightness down'"
 
 bindsym Print exec --no-startup-id "flameshot gui"
+bindsym $mod+p exec --no-startup-id "ls -1 /home/vorago/code | rofi -dmenu | xargs -I{} /usr/local/bin/runorraiseidea {}"
 
 exec_always --no-startup-id MONITOR=DP-1 $HOME/.config/polybar/launch.sh
 exec --no-startup-id nm-applet --sm-disable
