--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -13,7 +13,7 @@ exec --no-startup-id "setxkbmap -layout us,ru -option 'grp:caps_toggle'"
 exec --no-startup-id "xinput set-prop 12 \"libinput Tapping Enabled\" 1"
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id "rofi -show drun -config ~/.config/i3/rofi";
+bindsym $mod+d exec --no-startup-id "rofi -show drun";
 bindsym ctrl+grave exec i3-quickterm shell
 
 # change focus
