--- a/home/.config/compton.conf
+++ b/home/.config/compton.conf
@@ -24,10 +24,10 @@ shadow-exclude = [
 shadow-ignore-shaped = true;
 
 # Opacity
-menu-opacity = 0.9;			# The opacity for menus. (default 1.0)
-inactive-opacity = 0.9;			# Opacity of inactive windows. (0.1 - 1.0)
+#menu-opacity = 0.9;			# The opacity for menus. (default 1.0)
+#inactive-opacity = 0.9;			# Opacity of inactive windows. (0.1 - 1.0)
 #frame-opacity = 0.8;			# Opacity of window titlebars and borders. (0.1 - 1.0)
-inactive-opacity-override = true;	# Inactive opacity set by 'inactive-opacity' overrides value of _NET_WM_OPACITY.
+#inactive-opacity-override = true;	# Inactive opacity set by 'inactive-opacity' overrides value of _NET_WM_OPACITY.
 
 # Fading
 fading = false;			# Fade windows during opacity changes.
@@ -37,7 +37,7 @@ fade-out-step = 0.03;		# Opacity change between steps while fading out. (default
 # no-fading-openclose = true;	# Fade windows in/out when opening/closing.
 
 # Other
-#inactive-dim = 0.5;		# Dim inactive windows. (0.0 - 1.0, defaults to 0).
+inactive-dim = 0.2;		# Dim inactive windows. (0.0 - 1.0, defaults to 0).
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 use-ewmh-active-win = true;
@@ -45,7 +45,6 @@ detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
 dbe = false;
-paint-on-overlay = true;
 glx-no-stencil = true;
 glx-copy-from-front = false;
 glx-swap-method = "undefined";
