--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -37,7 +37,7 @@ fade-out-step = 0.03;		# Opacity change between steps while fading out. (default
 # no-fading-openclose = true;	# Fade windows in/out when opening/closing.
 
 # Other
-inactive-dim = 0.2;		# Dim inactive windows. (0.0 - 1.0, defaults to 0).
+#inactive-dim = 0.2;		# Dim inactive windows. (0.0 - 1.0, defaults to 0).
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 use-ewmh-active-win = true;
