open-ide keybinding

--- a/.config/i3/6-keybindings.conf
+++ b/.config/i3/6-keybindings.conf
@@ -3,7 +3,7 @@ bindsym $mod+Shift+q kill
 
 bindsym $mod+d exec --no-startup-id "rofi -show drun";
 bindsym Print exec --no-startup-id "flameshot gui"
-bindsym $mod+p exec --no-startup-id "find /home/vorago/code -type d -path '*/.git' | cut -c19- | rev | cut -c6- | rev | rofi -dmenu | xargs -I{} /usr/local/bin/open-ide {}"
+bindsym $mod+p exec --no-startup-id "/usr/local/bin/open-ide --depth 3 --codeDir /home/vorago/code/ --ideCommand /opt/idea/idea"
 
 bindsym $mod+Shift+bracketleft move workspace to output left
 bindsym $mod+Shift+bracketright move workspace to output right
