Remove IP detection from i3bar

--- a/.gitconfig
+++ b/.gitconfig
@@ -9,6 +9,7 @@
 	encoding = utf-8
 [push]
 	default = simple
+	autoSetupRemote = true
 [help]
 	autocorrect = -1
 [alias]
@@ -19,3 +20,11 @@
 	ff = only
 [pull]
 	ff = only
+[init]
+	defaultBranch = master
+[http]
+	sslVerify = false
+[credential]
+	helper = store
+[commit]
+	gpgsign = true
