zsh config added

--- a/.config/i3/3-autostart.conf
+++ b/.config/i3/3-autostart.conf
@@ -2,7 +2,7 @@
 exec --no-startup-id "setxkbmap -layout us,ru -option 'grp:caps_toggle'"
 exec --no-startup-id "xinput set-prop 12 \"libinput Tapping Enabled\" 1"
 
-exec --no-startup-id "compton --config ~/.config/compton.conf -b"
+exec --no-startup-id "picom --config ~/.config/picom/picom.conf -b"
 hide_edge_borders both
 
 exec --no-startup-id nm-applet --sm-disable
