--- a/.config/i3/6-keybindings.conf
+++ b/.config/i3/6-keybindings.conf
@@ -1,4 +1,4 @@
-bindsym $mod+Return exec termite
+bindsym $mod+Return exec $term
 bindsym $mod+Shift+q kill
 
 bindsym $mod+d exec --no-startup-id "rofi -show drun";
