switch from oh-my-zsh to prezto

--- a/.config/i3/6-keybindings.conf
+++ b/.config/i3/6-keybindings.conf
@@ -1,4 +1,6 @@
 bindsym $mod+Return exec $term
+bindsym Ctrl+grave exec xfce4-terminal --drop-down
+
 bindsym $mod+Shift+q kill
 
 bindsym $mod+d exec --no-startup-id "rofi -show drun";
