--- a/.config/i3/3-autostart.conf
+++ b/.config/i3/3-autostart.conf
@@ -12,3 +12,4 @@ exec --no-startup-id noisetorch -i
 exec --no-startup-id xset -dpms s off
 exec_always --no-startup-id autorandr --change
 
+exec --no-startup-id start_conky_maia
