fix: updated idea location. Fixed curl redirect following

--- a/.config/i3/6-keybindings.conf
+++ b/.config/i3/6-keybindings.conf
@@ -5,7 +5,7 @@ bindsym $mod+Shift+q kill
 
 bindsym $mod+d exec --no-startup-id "rofi -show drun";
 bindsym Print exec --no-startup-id "flameshot gui"
-bindsym $mod+p exec --no-startup-id "/usr/local/bin/open-ide --depth 3 --codeDir /home/vorago/code/ --ideCommand /opt/idea/idea"
+bindsym $mod+p exec --no-startup-id "/usr/local/bin/open-ide --depth 3 --codeDir /home/vorago/code/ --ideCommand /home/vorago/.local/share/JetBrains/Toolbox/scripts/idea"
 bindsym $mod+m exec "/usr/local/bin/rofi-autorandr"
 
 bindsym $mod+Shift+bracketleft move workspace to output left
