--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,8 @@
 	excludesfile = ~/.gitignore_global
 [user]
 	name = Andrew Naydyonock
-	email = a.vorago@gmail.com
+	email = vorago@protonmail.com
+	signingkey = 40CF0D75E66EB776DA75E297D7578C1D50CC0B55
 [gui]
 	encoding = utf-8
 [push]
