monitor setup changes

--- a/.config/i3/5-statusbar.conf
+++ b/.config/i3/5-statusbar.conf
@@ -11,5 +11,6 @@ bar {
         inactive_workspace #333333 #333333 #888888
         urgent_workspace #2f343a #900000 #ffffff
     }
+    tray_output primary
 }
 
