--- a/.config/i3/6-keybindings.conf
+++ b/.config/i3/6-keybindings.conf
@@ -6,9 +6,34 @@ bindsym $mod+Shift+q kill
 bindsym $mod+d exec --no-startup-id "rofi -show drun";
 bindsym Print exec --no-startup-id "flameshot gui"
 bindsym $mod+p exec --no-startup-id "/usr/local/bin/open-ide --depth 3 --codeDir /home/vorago/code/ --ideCommand /home/vorago/.local/share/JetBrains/Toolbox/scripts/idea"
-bindsym $mod+m exec "/usr/local/bin/rofi-autorandr"
 
 bindsym $mod+Shift+bracketleft move workspace to output left
 bindsym $mod+Shift+bracketright move workspace to output right
 bindsym $mod+Shift+Control+bracketleft move workspace to output top
 bindsym $mod+Shift+Control+bracketright move workspace to output down
+
+set $mode_system System (l) lock, (e) logout, (p) suspend, (h) hibernate, (r) reboot, (s) shutdown
+mode "$mode_system" {
+    bindsym l exec --no-startup-id i3exit lock, mode "default"
+    bindsym e exec --no-startup-id i3exit logout, mode "default"
+    bindsym p exec --no-startup-id i3exit suspend, mode "default"
+    bindsym h exec --no-startup-id i3exit hibernate, mode "default"
+    bindsym r exec --no-startup-id i3exit reboot, mode "default"
+    bindsym s exec --no-startup-id i3exit shutdown, mode "default"
+
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+bindsym $mod+Escape mode "$mode_system"
+
+set $mode_autorandr Autorandr (h) home-dual (s) home-single (w) work (d) default
+mode "$mode_autorandr" {
+    bindsym h exec --no-startup-id /usr/local/bin/rofi-autorandr home-dock, mode "default"
+    bindsym s exec --no-startup-id /usr/local/bin/rofi-autorandr home-single, mode "default"
+    bindsym w exec --no-startup-id /usr/local/bin/rofi-autorandr work, mode "default"
+    bindsym d exec --no-startup-id /usr/local/bin/rofi-autorandr default, mode "default"
+
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+bindsym $mod+m mode "$mode_autorandr"
