i3status-rs new config format

--- a/.config/i3/6-keybindings.conf
+++ b/.config/i3/6-keybindings.conf
@@ -5,7 +5,7 @@ bindsym $mod+Shift+q kill
 
 bindsym $mod+d exec --no-startup-id "rofi -show drun";
 bindsym Print exec --no-startup-id "flameshot gui"
-bindsym $mod+p exec --no-startup-id "/usr/local/bin/open-ide --depth 3 --codeDir /home/vorago/code/ --ideCommand /home/vorago/.local/share/JetBrains/Toolbox/scripts/idea"
+bindsym $mod+p exec --no-startup-id "/usr/local/bin/open-ide --depth 4 --codeDir /home/vorago/code/ --ideCommand /home/vorago/.local/share/JetBrains/Toolbox/scripts/idea"
 
 bindsym $mod+Shift+bracketleft move workspace to output left
 bindsym $mod+Shift+bracketright move workspace to output right
@@ -30,7 +30,7 @@ set $mode_autorandr Autorandr (h) home-dual (s) home-single (w) work (d) default
 mode "$mode_autorandr" {
     bindsym h exec --no-startup-id /usr/local/bin/rofi-autorandr home-dock, mode "default"
     bindsym s exec --no-startup-id /usr/local/bin/rofi-autorandr home-single, mode "default"
-    bindsym w exec --no-startup-id /usr/local/bin/rofi-autorandr work, mode "default"
+    bindsym w exec --no-startup-id /usr/local/bin/rofi-autorandr work-dock, mode "default"
     bindsym d exec --no-startup-id /usr/local/bin/rofi-autorandr default, mode "default"
 
     bindsym Return mode "default"
