--- a/.config/i3status-rust/config.toml
+++ b/.config/i3status-rust/config.toml
@@ -1,26 +1,30 @@
+# https://docs.rs/i3status-rs/latest/i3status_rs/blocks/index.html
+
+[theme]
 theme = "solarized-dark"
-icons = "awesome"
+[icons]
+icons = "awesome4"
 
 [[block]]
 block = "disk_space"
-path = "/"
-alias = "/"
 info_type = "available"
-unit = "GB"
-interval = 20
-warning = 20.0
+alert_unit = "GB"
 alert = 10.0
+warning = 15.0
+format = " $icon $available "
+format_alt = " $icon $available / $total "
 
 [[block]]
 block = "memory"
-display_type = "memory"
-format_mem = "{mem_used_percents}"
-format_swap = "{swap_used_percents}"
+format = " $icon $mem_used_percents.eng(w:1) "
+interval = 30
+warning_mem = 70
+critical_mem = 90
 
 [[block]]
 block = "cpu"
-format = "{barchart}"
 interval = 1
+format = " $icon $barchart $utilization "
 
 [[block]]
 block = "backlight"
@@ -33,10 +37,9 @@ block = "sound"
 
 [[block]]
 block = "battery"
-interval = 10
-format = "{percentage}"
+format = " $icon $percentage "
 
 [[block]]
 block = "time"
 interval = 5
-format = "%a %d/%m %R"
+format = " $icon $timestamp.datetime(f:'%a %d/%m %R')"
